Основное задание: декоративные элементы личного проекта
Сохранение промежуточных результатов

--- a/index.html
+++ b/index.html
@@ -26,57 +26,61 @@
           <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
             <section class="hero">
                 <h2 class="visually-hidden">Главная фотография города Седона</h2>
-                <img src="img/welcome-text.png" height="400" width="500" class = "pic-welcome" alt="Добро пожаловать в Седону">
+                <img src="img/welcome-text.png" height="353" width="459" class = "pic-welcome" alt="Добро пожаловать в Седону">
             </section>
             <div class="main-promo-wrapper">
-                <b class="promo-bold">Седона - небольшой городок в Аризоне,<br> заслуживающий большего!</b>
-                <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+                <b class="promo-bold">Седона &mdash; небольшой городок в Аризоне,<br> заслуживающий большего!</b>
+                <p class="promo">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
             </div>
             <section class="advantages">
               <h2 class="visually-hidden">Преимущества городка</h2>
               <ul class="advantages-list"> <!--  Основной список -->
-                 <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
-                  <h3 class="advantages-title">Настоящий <br> городок</h3>
-                  <p class="advantages-number">№1</p>
-                  <p class="advantages-text">Седона - не аттракцион для туристов,<br> там течёт своя жизнь</p>
+                 <li class="advantages-item advantages-item-special advantages-item-picture city-background"> <!-- Элемент с картинкой и синим фоном -->
+                     <div class="text-wrapper">
+                         <h3 class="advantages-title">Настоящий <br> городок</h3>
+                         <p class="advantages-number">&mdash;&nbsp;№1&nbsp;&mdash;</p>
+                         <p class="advantages-text">Седона - не аттракцион для туристов,<br> там течёт своя жизнь</p>
+                     </div>
                 </li>
                 <li class="advantages-item">
                    <ul class="advantages-inner-list">  <!-- Вложенный список -->
-                       <li class="advantages-item advantages-item-white advantages-item-icon"> <!-- Элемент белого списка -->
-                           <h3 class="advantages-title">Жилье</h3>
+                       <li class="advantages-item advantages-item-white advantages-item-icon icon-home"> <!-- Элемент белого списка -->
+                           <h3 class="advantages-title">Жильё</h3>
                            <p class="advantages-text-black">Рекомендуем пожить в настоящем <br> мотеле, все как в кино! </p>
                        </li>
-                       <li class="advantages-item advantages-item-white advantages-item-icon">
+                       <li class="advantages-item advantages-item-white advantages-item-icon icon-food">
                            <h3 class="advantages-title">Еда</h3>
                            <p class="advantages-text-black">Всегда заказывайте фирменный бургер <br>, вы не разочаруетесь!</p>
                        </li>
-                       <li class="advantages-item advantages-item-white advantages-item-icon">
+                       <li class="advantages-item advantages-item-white advantages-item-icon icon-souvenir">
                            <h3 class="advantages-title">Сувениры</h3>
                            <p class="advantages-text-black">Не только китайского, но и местного <br> производства!</p>
                        </li>
                    </ul>
                 </li>
-                  <li class="advantages-item advantages-item-special advantages-item-picture"> <!-- Элемент с картинкой и синим фоном -->
-                    <h3 class="advantages-title">Там есть мост дьявола</h3>
-                    <p class="advantages-number">№2</p>
-                    <p class="advantages-text">Да, по нему можно пройти! Если конечно <br> вы осмелитесь</p>
+                  <li class="advantages-item advantages-item-special advantages-item-picture mountains-background"> <!-- Элемент с картинкой и синим фоном -->
+                        <div class="text-wrapper">
+                            <h3 class="advantages-title">Там есть <br> мост дьявола</h3>
+                            <p class="advantages-number">&mdash;&nbsp;№2&nbsp;&mdash;</p>
+                            <p class="advantages-text">Да, по нему можно пройти! Если конечно <br> вы осмелитесь</p>
+                        </div>
                   </li>
                   <li class="advantages-item">
                   <ul class="advantages-inner-list"> <!-- Вложенный список -->
                     <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
-                      <h3 class="advantages-title">Небольшая площадь</h3>
-                      <p class="advantages-text">№3</p>
-                      <p class="advantages-text">Все достопримечательности находятся очень близко</p>
+                      <h3 class="advantages-title">Небольшая <br> площадь</h3>
+                      <p class="advantages-number">&mdash;&nbsp;№3&nbsp;&mdash;</p>
+                      <p class="advantages-text">Все достопримечательности <br> находятся очень близко</p>
                     </li>
                     <li class="advantages-item advantages-item-grey">
-                      <h3 class="advantages-title">Красивая дорога</h3>
-                      <p class="advantages-text">№4</p>
-                      <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
+                      <h3 class="advantages-title">Красивая <br> дорога</h3>
+                      <p class="advantages-number">&mdash;&nbsp;№4&nbsp;&mdash;</p>
+                      <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем <br> не скучно!</p>
                     </li>
                     <li class="advantages-item advantages-item-grey">
-                      <h3 class="advantages-title">Мало туристов</h3>
-                      <p class="advantages-text">№5</p>
-                      <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
+                      <h3 class="advantages-title">Мало <br> туристов</h3>
+                      <p class="advantages-number">&mdash;&nbsp;№5&nbsp;&mdash;</p>
+                      <p class="advantages-text">Большинство едет в Гранд Каньон <br> и толпится там</p>
                     </li>
                   </ul>
                   </li>
@@ -85,16 +89,16 @@
               <section class="hotels">
                 <h2 class="visually-hidden">Поиск гостиницы в Седоне</h2>
                 <b>Заинтересовались?</b>
-                <p class="hotels-info">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <p class="hotels-info">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
                 <section class="modal modal-hotels-search">
                     <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
-                        <p class="hotels-search-item">
-                            <label for="arrival-date-field">Дата заезда</label>
-                            <input type="text" class="date" name="arrival-date" id="arrival-date-field" placeholder=" ">
+                        <p class="hotels-search-item arrival-date">
+                            <label for="arrival-date-field">Дата заезда:</label>
+                            <input type="text" class="form-date-input" name="arrival-date" id="arrival-date-field" placeholder=" ">
                         </p>
-                        <p class="hotels-search-item">
-                            <label for="departure-date-field">Дата выезда</label>
+                        <p class="hotels-search-item departure-date">
+                            <label for="departure-date-field">Дата выезда:</label>
                             <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
                         </p>
                          <p class="hotels-search-item">
@@ -113,7 +117,7 @@
                     </form>
                 </section>
                 <div class="map">
-                    <img src="img/map.jpg" width="1200" height="470" alt="Карта Седоны">
+                    <img src="img/map.jpg" width="1200" height="593" alt="Карта Седоны">
                 </div>
             </section>
         </main>
