Сохранение промежуточных этапов

--- a/index.html
+++ b/index.html
@@ -102,17 +102,23 @@
                             <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
                         </p>
                          <p class="hotels-search-item">
-                             <label for="adults-number-field">Взрослые</label>
-                             <button class="button hotel-search-button-plus"></button>
-                             <input type="text" name="adults-number" id="adults-number-field">
-                             <button class="button hotel-search-button-minus"></button>
+                                 <label for="adults-number-field">Взрослые:</label>
+                                 <!-- <div class="test"> -->
+                                     <button class="button hotel-search-button-plus"></button>
+                                     <input type="text" name="adults-number" id="adults-number-field" class="adults-number">
+                                     <button class="button hotel-search-button-minus"></button>
+                                <!-- </div> -->
+                                 <label for="children-number-field">Дети:</label>
+                                 <button class="button hotel-search-button-plus" type="button"></button>
+                                 <input type="text" name="children-number" id="children-number-field" class="children-number">
+                                 <button class="button hotel-search-button-minus" type="button"></button>
                         </p>
-                        <p class="hotels-search-item">
+                        <!-- <p class="hotels-search-item">
                             <label for="children-number-field">Дети</label>
                             <button class="button hotel-search-button-plus" type="button"></button>
-                            <input type="text" name="children-number" id="children-number-field">
+                            <input type="text" name="children-number" id="children-number-field" class="children-number">
                             <button class="button hotel-search-button-minus" type="button"></button>
-                       </p>
+                       </p> -->
                         <button class="button hotel-search-button" type="submit">Найти</button>
                     </form>
                 </section>
