--- a/index.html
+++ b/index.html
@@ -101,17 +101,15 @@
                             <label for="departure-date-field">Дата выезда:</label>
                             <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
                         </p>
-                         <p class="hotels-search-item">
-                                 <label for="adults-number-field">Взрослые:</label>
-                                 <!-- <div class="test"> -->
-                                     <button class="button hotel-search-button-plus"></button>
-                                     <input type="text" name="adults-number" id="adults-number-field" class="adults-number">
-                                     <button class="button hotel-search-button-minus"></button>
-                                <!-- </div> -->
-                                 <label for="children-number-field">Дети:</label>
-                                 <button class="button hotel-search-button-plus" type="button"></button>
-                                 <input type="text" name="children-number" id="children-number-field" class="children-number">
+                         <p class="hotels-search-item persons-number">
+                                 <label for="adults-number-field" class="adults-number">Взрослые:</label>
+                                 <button class="button hotel-search-button-minus"></button>
+                                 <input type="text" name="adults-number" id="adults-number-field" class="adults-number-input">
+                                 <button class="button hotel-search-button-plus"></button>
+                                 <label for="children-number-field" class="children-number">Дети:</label>
                                  <button class="button hotel-search-button-minus" type="button"></button>
+                                 <input type="text" name="children-number" id="children-number-field" class="children-number-input">
+                                 <button class="button hotel-search-button-plus" type="button"></button>
                         </p>
                         <!-- <p class="hotels-search-item">
                             <label for="children-number-field">Дети</label>
