--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
                   <li class="advantages-item">
                   <ul class="advantages-inner-list"> <!-- Вложенный список -->
                     <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
-                      <h3 class="advantages-title">Небольшая <br> площадь</h3>
-                      <p class="advantages-number">&mdash;&nbsp;№3&nbsp;&mdash;</p>
-                      <p class="advantages-text">Все достопримечательности <br> находятся очень близко</p>
+                        <div class="text-wrapper">
+                            <h3 class="advantages-title">Небольшая <br> площадь</h3>
+                            <p class="advantages-number">&mdash;&nbsp;№3&nbsp;&mdash;</p>
+                            <p class="advantages-text">Все достопримечательности <br> находятся очень близко</p>
+                      </div>
                     </li>
                     <li class="advantages-item advantages-item-grey">
                       <h3 class="advantages-title">Красивая <br> дорога</h3>
@@ -96,7 +98,7 @@
                         <p class="hotels-search-item arrival-date">
                             <label for="arrival-date-field">Дата заезда:</label>
                             <input type="text" class="form-date-input" name="arrival-date" id="arrival-date-field" placeholder=" ">
-                            <button class="calendar-button">
+                            <button type ="button" class="calendar-button">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                                     <path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
                                     <path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
@@ -106,7 +108,7 @@
                         <p class="hotels-search-item departure-date">
                             <label for="departure-date-field">Дата выезда:</label>
                             <input type="text" class="form-date-input" name="departure-date" id="departure-date-field" placeholder=" ">
-                            <button class="calendar-button">
+                            <button type="button" class="calendar-button">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="21" height="22" viewBox="0 0 21 22">
                                     <path fill="#a9a9a9" d="M19.251 2.025h-2.845V.648c0-.381-.294-.689-.656-.689-.363 0-.656.308-.656.689v1.377h-3.938V.648c0-.381-.294-.689-.655-.689-.363 0-.657.308-.657.689v1.377H5.906V.648c0-.381-.294-.689-.656-.689-.363 0-.657.308-.657.689v1.377H1.75C.784 2.025 0 2.847 0 3.862v16.302C0 21.179.784 22 1.75 22h17.501c.966 0 1.749-.821 1.749-1.836V3.862c0-1.015-.783-1.837-1.749-1.837zm.437 18.139a.448.448 0 0 1-.437.459H1.75a.45.45 0 0 1-.438-.459V3.862a.45.45 0 0 1 .438-.459h2.844v1.378c0 .381.294.689.657.689.362 0 .656-.308.656-.689V3.403h3.938v1.378c0 .381.294.689.657.689.361 0 .655-.308.655-.689V3.403h3.938v1.378c0 .381.293.689.656.689.362 0 .656-.308.656-.689V3.403h2.845c.241 0 .437.206.437.459v16.302z"/>
                                     <path fill="#a9a9a9" d="M4.594 8.225h2.625v2.066H4.594zM4.594 11.668h2.625v2.067H4.594zM4.594 15.112h2.625v2.066H4.594zM9.188 15.112h2.625v2.066H9.188zM9.188 11.668h2.625v2.067H9.188zM9.188 8.225h2.625v2.066H9.188zM13.781 15.112h2.625v2.066h-2.625zM13.781 11.668h2.625v2.067h-2.625zM13.781 8.225h2.625v2.066h-2.625z"/>
@@ -132,10 +134,10 @@
                         <button class="button hotel-search-button" type="submit">Найти</button>
                     </form>
                 </section>
-                <div class="map">
-                    <img src="img/map.jpg" width="1200" height="593" alt="Карта Седоны">
-                </div>
             </section>
+            <div class="map">
+                <img src="img/map.jpg" width="1200" height="593" alt="Карта Седоны">
+            </div>
         </main>
         <footer class="main-footer">
             <div class="footer-content-wrapper">
