Доделал вторую страницу

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
         <header class="main-header">
           <nav class="main-navigation">
             <ul class="site-navigation">
-              <li><a href="info.html">Информация</a></li>
-              <li><a href="photo-video.html">Фото и видео</a></li>
-              <li><a href="map.html">Карта штата</a></li>
-              <li><a href="hotels.html">Гостиницы</a></li>
+              <li class="left-navigation"><a href="info.html">Информация</a></li>
+              <li class="left-navigation"><a href="photo-video.html">Фото и видео</a></li>
+              <li class="right-navigation"><a href="map.html">Карта штата</a></li>
+              <li class="right-navigation"><a href="hotels.html">Гостиницы</a></li>
             </ul>
             <a class="main-header-logo">
               <img src="img/logo-sedona.svg" height="70" width="140" alt="Логотип города Седона">
@@ -97,7 +97,7 @@
                     <div class="text-wrapper">
                         <b>Заинтересовались?</b>
                         <p class="hotels-info">Укажите предполагаемые даты поездки, <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-                    </div>        
+                    </div>
                 <a class="button button-hotels-search" href="#">Поиск гостиницы в Седоне</a>
                 <section class="modal modal-hotels-search">
                     <form class="hotels-search" action="https://echo.htmlacademy.ru" method="get">
