--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@
                                  <input type="text" name="adults-number" id="adults-number-field" class="adults-number-input" placeholder="2">
                                  <button type="button" class="button hotel-search-button-plus"></button>
                                  <label for="children-number-field" class="children-number">Дети:</label>
-                                 <button type="button" class="button hotel-search-button-minus" type="button"></button>
+                                 <button type="button" class="button hotel-search-button-minus"></button>
                                  <input type="text" name="children-number" id="children-number-field" class="children-number-input" placeholder="0">
-                                 <button type="button" class="button hotel-search-button-plus" type="button"></button>
+                                 <button type="button" class="button hotel-search-button-plus"></button>
                         </p>
                         <button class="button hotel-search-button" type="submit">Найти</button>
                     </form>
