--- a/hotels.html
+++ b/hotels.html
@@ -82,9 +82,9 @@
                                         </div>
                                         <button  class="btn-transparent" type="submit">Показать</button>
                                     </fieldset>
-                        </div>
+                                </div>
+                            </div>
                         </form>
-
                    </section>
                <section class="hotels">
                    <h2 class="visually-hidden">Список гостиниц</h2>
@@ -128,10 +128,10 @@
                                </div>
                                <div class="rating-wrapper">
                                    <div class="rating rating-stars">
-                                       <img src="img/star.svg" alt="Рейтинг гостиницы 4 звезды">
-                                       <img src="img/star.svg" alt="">
-                                       <img src="img/star.svg" alt="">
-                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
                                    </div>
                                    <p class="raing rating-number">
                                        Рейтинг: 8.5
@@ -161,9 +161,9 @@
                                </div>
                                <div class="rating-wrapper">
                                    <div class="rating rating-stars">
-                                       <img src="img/star.svg" alt="Рейтинг гостиницы 3 звезды">
-                                       <img src="img/star.svg" alt="">
-                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
                                    </div>
                                    <p class="raing rating-number">
                                        Рейтинг: 8.9
@@ -191,8 +191,8 @@
                                </div>
                                <div class="rating-wrapper">
                                    <div class="rating rating-stars">
-                                       <img src="img/star.svg" alt="Рейтинг гостиницы 2 звезды">
-                                       <img src="img/star.svg" alt="">
+                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды">
+                                       <img src="img/star.svg" width="18" height="17" alt="">
                                    </div>
                                    <p class="raing rating-number">
                                        Рейтинг: 9.2
