--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <main class="container">
           <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
             <section class="hero">
-                <h2 class="visually-hidden">Главная фотография города Седона</h2>
+                <h2 class="visually-hidden">Коротко о Седоне</h2>
                 <img src="img/welcome-text.png" height="353" width="459" class = "pic-welcome" alt="Добро пожаловать в Седону">
             </section>
             <div class="main-promo-wrapper">
@@ -34,27 +34,27 @@
             </div>
             <section class="advantages">
               <h2 class="visually-hidden">Преимущества городка</h2>
-              <ul class="advantages-list"> <!--  Основной список -->
-                 <li class="advantages-item advantages-item-special advantages-item-picture city-background"> <!-- Элемент с картинкой и синим фоном -->
+              <ul class="advantages-list">
+                 <li class="advantages-item advantages-item-special advantages-item-picture city-background">
                      <div class="text-wrapper">
-                         <h3 class="advantages-title">Настоящий <br> городок</h3>
+                         <h3 class="advantages-title">Настоящий городок</h3>
                          <p class="advantages-number">&mdash;&nbsp;№1&nbsp;&mdash;</p>
-                         <p class="advantages-text">Седона - не аттракцион для туристов,<br> там течёт своя жизнь</p>
+                         <p class="advantages-text">Седона - не аттракцион для туристов, там течёт своя жизнь</p>
                      </div>
                 </li>
                 <li class="advantages-item">
-                   <ul class="advantages-inner-list">  <!-- Вложенный список -->
-                       <li class="advantages-item advantages-item-white advantages-item-icon icon-home"> <!-- Элемент белого списка -->
+                   <ul class="advantages-inner-list">
+                       <li class="advantages-item advantages-item-white advantages-item-icon icon-home">
                            <h3 class="advantages-title">Жильё</h3>
-                           <p class="advantages-text-black">Рекомендуем пожить в настоящем <br> мотеле, все как в кино!</p>
+                           <p class="advantages-text-black">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
                        </li>
                        <li class="advantages-item advantages-item-white advantages-item-icon icon-food">
                            <h3 class="advantages-title">Еда</h3>
-                           <p class="advantages-text-black">Всегда заказывайте фирменный бургер, <br> вы не разочаруетесь!</p>
+                           <p class="advantages-text-black">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                        </li>
                        <li class="advantages-item advantages-item-white advantages-item-icon icon-souvenir">
                            <h3 class="advantages-title">Сувениры</h3>
-                           <p class="advantages-text-black">Не только китайского, но и местного <br> производства!</p>
+                           <p class="advantages-text-black">Не только китайского, но и местного производства!</p>
                        </li>
                    </ul>
                 </li>
@@ -62,31 +62,31 @@
                         <div class="text-wrapper">
                             <h3 class="advantages-title">Там есть <br> мост дьявола</h3>
                             <p class="advantages-number">&mdash;&nbsp;№2&nbsp;&mdash;</p>
-                            <p class="advantages-text">Да, по нему можно пройти! Если конечно <br> вы осмелитесь
+                            <p class="advantages-text">Да, по нему можно пройти! Если конечно вы осмелитесь
                             </p>
                         </div>
                   </li>
                   <li class="advantages-item">
-                  <ul class="advantages-inner-list"> <!-- Вложенный список -->
-                    <li class="advantages-item advantages-item-grey"> <!-- Элемент белого списка -->
+                  <ul class="advantages-inner-list">
+                    <li class="advantages-item advantages-item-grey">
                         <div class="text-wrapper">
-                            <h3 class="advantages-title">Небольшая <br> площадь</h3>
+                            <h3 class="advantages-title">Небольшая площадь</h3>
                             <p class="advantages-number">&mdash;&nbsp;№3&nbsp;&mdash;</p>
-                            <p class="advantages-text">Все достопримечательности <br> находятся очень близко</p>
+                            <p class="advantages-text">Все достопримечательности находятся очень близко</p>
                         </div>
                     </li>
                     <li class="advantages-item advantages-item-grey">
                         <div class="text-wrapper">
-                            <h3 class="advantages-title">Красивая <br> дорога</h3>
+                            <h3 class="advantages-title">Красивая дорога</h3>
                             <p class="advantages-number">&mdash;&nbsp;№4&nbsp;&mdash;</p>
-                            <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем <br> не скучно!</p>
+                            <p class="advantages-text">Ехать в седону из Лас-Вегаса совсем не скучно!</p>
                         </div>
                     </li>
                     <li class="advantages-item advantages-item-grey">
                         <div class="text-wrapper">
-                            <h3 class="advantages-title">Мало <br> туристов</h3>
+                            <h3 class="advantages-title">Мало туристов</h3>
                             <p class="advantages-number">&mdash;&nbsp;№5&nbsp;&mdash;</p>
-                            <p class="advantages-text">Большинство едет в Гранд Каньон <br> и толпится там</p>
+                            <p class="advantages-text">Большинство едет в Гранд Каньон и толпится там</p>
                         </div>
                     </li>
                   </ul>
