--- a/hotels.html
+++ b/hotels.html
@@ -126,12 +126,7 @@
                                  </div>
                                </div>
                                <div class="rating-wrapper">
-                                   <div class="rating rating-stars">
-                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 4 звезды">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                   </div>
+                                   <p class="hotels-rating hotels-rating-four-stars">4 звезды</p>
                                    <p class="raing rating-number">
                                        Рейтинг: 8.5
                                    </p>
@@ -157,11 +152,7 @@
                                    </div>
                                </div>
                                <div class="rating-wrapper">
-                                   <div class="rating rating-stars">
-                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 3 звезды">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                   </div>
+                                   <p class="hotels-rating hotels-rating-three-stars">3 звезды</p>
                                    <p class="raing rating-number">
                                        Рейтинг: 8.9
                                    </p>
@@ -185,10 +176,7 @@
                                    </div>
                                </div>
                                <div class="rating-wrapper">
-                                   <div class="rating rating-stars">
-                                       <img src="img/star.svg" width="18" height="17" alt="Рейтинг гостиницы 2 звезды">
-                                       <img src="img/star.svg" width="18" height="17" alt="">
-                                   </div>
+                                   <p class="hotels-rating hotels-rating-two-stars">2 звезды</p>
                                    <p class="raing rating-number">
                                        Рейтинг: 9.2
                                    </p>
