--- a/hotels.html
+++ b/hotels.html
@@ -41,7 +41,7 @@
                                                     <label for="filters-parking-field">Парковка</label>
                                                 </li>
                                                 <li class="filters-option">
-                                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-wi-fi" id="filters-wi-fi-field">
+                                                    <input class="visually-hidden filters-input filters-input-checkbox" type="checkbox" name="filters-wi-fi" id="filters-wi-fi-field" checked disabled>
                                                     <label for="filters-wi-fi-field">Wi-Fi</label>
                                                 </li>
                                             </ul>
